--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 version 0.3.alpha4 (05/06/2012)
 * Misc:
     * trajectory-formats/modylas.F90: Added I/O for Modylas MD package
+    * mol_dissect: Fixed bugs with "save" command, reads PermIndex (so it now supports AMBER output), reads/writes sltpick
 
 version 0.3.alpha3 (04/12/2012)
 * Misc:
