--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+version 0.3.alpha7 (04/XX/2013)
+* Misc:
+    * The gromacs-type potential switch and the force switch for the LJ
+    interaction is implemented with a new key of ljswitch.
+    * A key of insstructure is introduced to select some solute structures
+    according to its RMSD relative to the reference structure.
+    * A procedure is defines which conducts a best-fit of
+    the host (presumably protein) to the reference structure
+    and inserts the solute (presumably ligand) within an given range of RMSD.
+
 version 0.3.alpha6 (02/21/2013)
 * Misc:
     * A snapshot can have its own weight; the weight information is saved in a
