--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@ version 0.3.alpha7 (04/08/2013)
     interaction is implemented with a new key of ljswitch.
     * A key of insstructure is introduced to select some solute structures
     according to its RMSD relative to the reference structure.
-    * A procedure is defines which conducts a best-fit of
+    * A procedure is defined which conducts a best-fit of
     the host (presumably protein) to the reference structure
     and inserts the solute (presumably ligand) within an given range of RMSD.
 
