--- a/extensions/README
+++ b/extensions/README
@@ -1,24 +1,42 @@
 slvfe.F90:
 
-The slvfe.F90 program contained in the extensions directory has a key of ljlrc, which enables the Lennard-Jones long-range correction at ljlrc = 'yes'
-To use the slvfe.F90 program in extensions, user simply does the followings in the parent directory of ermod.
+The slvfe.F90 program contained in the extensions directory has a key of ljlrc,
+which enables the Lennard-Jones long-range correction at ljlrc = 'yes'
+To use the slvfe.F90 program in extensions,
+user simply does the followings in the parent directory of ermod.
 
 $ mv slvfe.F90 slvfe_original.F90
 $ mv extensions/slvfe.F90 ./
 $ make
 $ make install
 
-Without stating ljlrc = 'yes' in parameters_fe, the modified slvfe works just as in the same way as the original slvfe.
-By setting ljlrc = 'yes' in parameters_fe, user is required to prepare a file contaning the average volume of the reference solvent, read, for example, as
+Without stating ljlrc = 'yes' in parameters_fe,
+the modified slvfe works just as in the same way as the original slvfe.
+
+By setting ljlrc = 'yes' in parameters_fe, user is required to prepare a file
+contaning the average volume of the reference solvent, read, for example, as
 
 $ cat volumedata
 30106.4
 
-The volumedata file simpy has the average volume of the reference solvent in the Angstrom^3 unit; note that it not be given in nm^3.
+The volumedata file simpy has the average volume of the reference solvent
+in Angstrom^3 unit; note that it not be given in nm^3.
 If the volumedata file is not present, user is asked
 
 write(6, *) " What is the average volume of reference solvent? (in Angstrom^3)"
 
-and is to type the average volume in Angstrom^3 on terminal.
+and is to type the average volume in Angstrom^3 directly on terminal.
 
-The difference between the original and modified slvfe.F90 is always updated in diff_slvfe in the extensions directory.
+The difference between the original and modified slvfe.F90
+is always updated in diff_slvfe in the extensions directory.
+
+Caution: The Lennard-Jones long-range correction implemented in the program
+can be used only when the solvent distribution function is homogeneous
+(radial distribution function is essentially unity)
+when the solvent molecule is separated beyond the Lennard-Jones cutoff distance
+in any direction from any atom in the solute molecule.
+The correction scheme may not be applied
+when the solute/solvent molecule is comparable in size to or larger
+than the cutoff radius, which is typically ~10 Angstrom,
+or when the solvent is inhomogeneous in nanoscale
+and, for example, is micelle or lipid membrane.
