--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-version 0.3.alpha8 (04/10/2013
+version 0.3.alpha8 (04/10/2013)
 * Solvation Free Energy:
     * Added dispersion correction on Lennard-Jones interaction.
 
