--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 version 0.3.alpha8 (04/10/2013)
 * Solvation Free Energy:
     * Added dispersion correction on Lennard-Jones interaction in a modified
-    slvfe.F90 program prepared in the extensions directory.
+    slvfe.F90 program prepared in the extensions directory. THIS WILL NOT
+    BE ENABLED BY DEFAULT! See extensions/README for details.
 
 version 0.3.alpha7 (04/08/2013)
 * Energy Histogram Computation:
