1) Treaetment of asymmetric slab is possible, 2) enginit within engproc is made easier to read, 3) a bug is fixed within instslt when the system is inhomogeneous, 4) sltpick is renamed to sltspec (though sltpick can be still used) to make all the species names end with "spec", 5) refspec (previously refpick, which can be still used) is again introduced to distinguish the host such as micelle or membrane and the superposition reference.
--HG--
branch : ver03

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,16 +1,20 @@
+version 0.3.alpha9 (0X/XX2013)
+* Misc:
+    * Treatment of asymmetric slab geometry is made possible
+
 version 0.3.alpha8 (04/10/2013)
 * Solvation Free Energy:
-    * Added dispersion correction on Lennard-Jones interaction in a modified
+    * Added dispersion correction on Lennard-Jones interaction in the modified
     slvfe.F90 program prepared in the extensions directory. THIS WILL NOT
     BE ENABLED BY DEFAULT! See extensions/README for details.
 
 version 0.3.alpha7 (04/08/2013)
 * Energy Histogram Computation:
     * The gromacs-type potential switch and the force switch for the LJ
-    interaction is implemented with a new key of ljswitch.
+    interaction are implemented with a new key of ljswitch.
 * Misc:
     * A key of insstructure is introduced to select some solute structures
-    according to its RMSD relative to the reference structure.
+    according to the solute RMSD relative to the reference structure.
     * A procedure is defined which conducts a best-fit of
     the host (presumably protein) to the reference structure
     and inserts the solute (presumably ligand) within an given range of RMSD.
