Reflecting a few changes in Changelog
--HG--
branch : ver03

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,13 @@
-version 0.3.alpha9 (0X/XX2013)
+version 0.3.alpha9 (XX/YY/2013)
 * Misc:
-    * Treatment of asymmetric slab geometry is made possible
+    * Treatment of asymmetric slab geometry is made possible.
+    * A workaround was implemented in configure agaist a bug in MKL ver 10.3.
 
 version 0.3.alpha8 (04/10/2013)
 * Solvation Free Energy:
     * Added dispersion correction on Lennard-Jones interaction in the modified
     slvfe.F90 program prepared in the extensions directory. THIS WILL NOT
-    BE ENABLED BY DEFAULT! See extensions/README for details.
+    BE ENABLED BY DEFAULT! See extensions/README_LJLRC for details.
 
 version 0.3.alpha7 (04/08/2013)
 * Energy Histogram Computation:
