The number of MPI calls is reduced in the engstore subroutine in engproc.F90, some comments are added in slvfe.F90, and the directory structure is changed for extensions
--HG--
branch : ver03

--- a/extensions/LJLRC/README
+++ b/extensions/LJLRC/README
@@ -6,7 +6,7 @@ To use the slvfe.F90 program contained in extensions,
 user simply does the followings in the parent directory of ermod.
 
 $ mv slvfe.F90 slvfe_original.F90
-$ cp extensions/slvfe.F90 ./
+$ cp extensions/LJLRC/slvfe.F90 ./
 $ make
 $ make install
 
