--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,11 @@
 version 0.3.alpha9 (XX/YY/2013)
+* Energy Histogram Computation:
+    * Non-orthogonal periodic box is now correctly handled.
 * Misc:
     * Treatment of asymmetric slab geometry is made possible.
     * A workaround was implemented in configure agaist a bug in MKL ver 10.3.
     * Added ERMOD_FORCE_PLUGIN_TYPE environment to coerce file format detection.
+    * Workaround cpp's error when using AMBER force field in GROMACS
 
 version 0.3.alpha8 (04/10/2013)
 * Solvation Free Energy:
