--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+version 0.3.1 (06/08/2015)
+* Bug fixes:
+    Fixed GROMAS gen_structure cannot specify solutes in interactive way
+
 version 0.3.0 (06/01/2015)
 * Bug fixes:
     GROMACS topology file parsing is now case sensitive
