--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+version 0.3.2 (XX/XX/2015)
+* Energy Histogram Computation:
+    * Gromacs-type force switching is implemented
+
 version 0.3.1 (06/08/2015)
 * Bug fixes:
     Fixed GROMAS gen_structure cannot specify solutes in interactive way
