--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 version 0.3.2 (XX/XX/2015)
 * Energy Histogram Computation:
     * CHARMM input is now supported in gen_structure
-    * PPPM computation is implemented (undocumented atm)
+    * PPPM computation is implemented (undocumented at the moment)
     * Gromacs-type force switching is implemented
     * Micelle, lipid membrane, and protein can consist of more than a single
     species
